--- a/_posts/2023-01-02-PQ-史無前例-跨年夜至-2023-元旦-共機擾台迫近台灣僅-24-浬.html
+++ b/_posts/2023-01-02-PQ-史無前例-跨年夜至-2023-元旦-共機擾台迫近台灣僅-24-浬.html
@@ -24,7 +24,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/225349fe-photo_2023-01-02_14-08-48-1024x772.jpg" alt="" class="wp-image-124424" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/225349fe-photo_2023-01-02_14-08-48-1024x772.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/225349fe-photo_2023-01-02_14-08-48-300x226.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/225349fe-photo_2023-01-02_14-08-48-768x579.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/225349fe-photo_2023-01-02_14-08-48.jpg 1069w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>國防部偵獲共機。圖／國防部</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/225349fe-photo_2023-01-02_14-08-48-1024x772.jpg" alt="" class="wp-image-124424" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/225349fe-photo_2023-01-02_14-08-48-1024x772.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/225349fe-photo_2023-01-02_14-08-48-300x226.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/225349fe-photo_2023-01-02_14-08-48-768x579.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/225349fe-photo_2023-01-02_14-08-48.jpg 1069w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>國防部偵獲共機。圖／國防部</figcaption></figure></div>
 
 
 
