--- a/_posts/2023-01-02-INMEDIA-內地女子崇光外展示煽動字眼圖片-涉煽動罪被捕.html
+++ b/_posts/2023-01-02-INMEDIA-內地女子崇光外展示煽動字眼圖片-涉煽動罪被捕.html
@@ -8,7 +8,8 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20230102s.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>昨日元旦日，一名內地女子晚上在銅鑼灣崇光百貨外展示懷疑有煽動字眼的圖片，並在地上擺放白色蠟燭及花束。在警員多次勸喻及警告不果後，最終以涉嫌干犯煽動意圖罪被捕。</p>
+<img src="https://www.inmediahk.net/files/column_images/20230102s.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>資料圖片</em></p>
+<p><font color="#e4692b">【獨媒報導】</font>昨日元旦日，一名內地女子晚上在銅鑼灣崇光百貨外展示懷疑有煽動字眼的圖片，並在地上擺放白色蠟燭及花束。在警員多次勸喻及警告不果後，最終以涉嫌干犯煽動意圖罪被捕。</p>
 <p>警方今日表示，灣仔警區人員昨日（1月1日）晚上約7時50分於區內巡邏期間，發現一名女子在軒尼詩道555號對開，即銅鑼灣崇光百貨外，展示懷疑附有煽動字眼的圖片，並在地上擺放白色蠟燭及花束，遂上前截查。</p>
 <p>警員多次勸喻及警告但不果，最後以涉嫌干犯煽動意圖罪拘捕該名22歲姓曾內地女子，案件交由灣仔警區重案組第一隊跟進，該被捕女子現正被扣留調查。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
