--- a/_posts/2023-01-02-PQ-通膨40-失業率21-貨幣重貶-醜聞-寮國總理宣布因健康因素下台.html
+++ b/_posts/2023-01-02-PQ-通膨40-失業率21-貨幣重貶-醜聞-寮國總理宣布因健康因素下台.html
@@ -16,7 +16,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/719936e0-322940026_2035320750000921_2588242564194486551_n.jpg" alt="" class="wp-image-124453" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/719936e0-322940026_2035320750000921_2588242564194486551_n.jpg 600w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/719936e0-322940026_2035320750000921_2588242564194486551_n-300x225.jpg 300w" sizes="(max-width: 600px) 100vw, 600px" /><figcaption>寮國前副總理副總理宋賽．西潘敦（Sonexay Siphandone）當選新任總理<br>圖／Vientiane Times</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/719936e0-322940026_2035320750000921_2588242564194486551_n.jpg" alt="" class="wp-image-124453" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/719936e0-322940026_2035320750000921_2588242564194486551_n.jpg 600w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/719936e0-322940026_2035320750000921_2588242564194486551_n-300x225.jpg 300w" sizes="(max-width: 600px) 100vw, 600px" /><figcaption>寮國前副總理副總理宋賽．西潘敦（Sonexay Siphandone）當選新任總理<br>圖／Vientiane Times</figcaption></figure></div>
 
 
 
