--- a/_posts/2023-01-03-PQ-稅收去年超徵新台幣4500億元-蔡英文宣布-發現金全民共享.html
+++ b/_posts/2023-01-03-PQ-稅收去年超徵新台幣4500億元-蔡英文宣布-發現金全民共享.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/ca0d0919-2000x1330_wmky_0917848015826.jpg" alt="" class="wp-image-124502" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/ca0d0919-2000x1330_wmky_0917848015826.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/ca0d0919-2000x1330_wmky_0917848015826-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/ca0d0919-2000x1330_wmky_0917848015826-768x511.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>去年稅收超徵 4,500 億元是否還稅於民受關注／圖：中央社。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/ca0d0919-2000x1330_wmky_0917848015826.jpg" alt="" class="wp-image-124502" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/ca0d0919-2000x1330_wmky_0917848015826.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/ca0d0919-2000x1330_wmky_0917848015826-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/ca0d0919-2000x1330_wmky_0917848015826-768x511.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>去年稅收超徵 4,500 億元是否還稅於民受關注／圖：中央社。</figcaption></figure></div>
 
 
 
