Update VOCUS 2023-01-04 patch

--- a/_posts/2023-01-03-VOCUS-不存在的書-想像一本也很有意思.html
+++ b/_posts/2023-01-03-VOCUS-不存在的書-想像一本也很有意思.html
@@ -48,4 +48,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">題材雖然有趣但是寫法基本就是同一個人，有時候多篇的主角口吻還都很類似、且也出現重複的場景和劇情安排，整體上總覺得偽裝不足啊。明明虛構的作者得了那麼多講、或是生平那麼有特色、還是暢銷作家，可以再針對文風做出區分，然後加上不同風格的書風設計，會更有趣味性，而不死板。</div>
 <div class="draft-block draft--p left">不過以題材來說，裡面有些小說的故事梗都還滿有意思的，很適合喜歡腦動大開的讀者，並留有想像空間給予故事一個自己喜歡的後續。故事並非都需要有個完美的句點，也可能是逗號或驚嘆，甚至在腦海中有著截然不同的劇情。</div>
 <div class="draft-block draft--p left">說來同人誌的出現便是如此，在原有的作品裡節外生枝，譜出完全不同的情節，也許一本本不存在的書，早早就在各讀者腦海萌芽、等待腦洞大開。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/zU8xr9tgerw&amp;t=51s"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/zU8xr9tgerw"></iframe></div>
