--- a/_posts/2023-01-04-INMEDIA-鄭子豪准保釋-4.19上訴-判詞-懲教指兩案刑期無法同期執行.html
+++ b/_posts/2023-01-04-INMEDIA-鄭子豪准保釋-4.19上訴-判詞-懲教指兩案刑期無法同期執行.html
@@ -8,8 +8,8 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202301045.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">【獨媒報導】</font>「12港人」之一鄭子豪分別承認妨礙司法公正，及於灣仔單位藏汽油彈半製成品和材料，兩案分別判監10及28個月，法官下令部份刑期同期執行，總刑期為31個月。鄭就次案刑期提出上訴，早前向上訴庭申請保釋以待上訴，獲上訴庭法官彭偉昌批准。彭官今（4日）頒下決定理由，當中透露懲教指兩案刑期無法同期執行，而上訴聆訊定於明年4月19日，為免出現鄭在上訴前已服畢所有或大部份刑期的情況，造成不公道，應批准他保釋外出。</p>
-<p>上訴人鄭子豪（20歲）與另外7人在內地法院承認偷越邊境罪，判監7個月，於2021年3月22日服刑完畢，即日從內地移交至本港，此後一直還柙，至今年7月15日在妨礙司法公正案中被判監10個月，再於翌日在藏汽油彈材料及半製成品案件中被判監28個月，法官游德康下令兩案部份刑期同期執行，總刑期為31個月。</p>
+<img src="https://www.inmediahk.net/files/column_images/202301045.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">【獨媒報導】</font>「12港人」之一鄭子豪分別承認妨礙司法公正，及於灣仔單位藏汽油彈半製成品和材料，兩案分別判監10及28個月，法官下令部份刑期同期執行，總刑期為31個月。鄭就次案刑期提出上訴，早前向上訴庭申請保釋以待上訴，獲上訴庭法官彭偉昌批准。彭官今（4日）頒下決定理由，當中透露懲教指兩案刑期無法同期執行，而上訴聆訊定於今年4月19日，為免出現鄭在上訴前已服畢所有或大部份刑期的情況，造成不公道，應批准他保釋外出。</p>
+<p>上訴人鄭子豪（20歲）與另外7人在內地法院承認偷越邊境罪，判監7個月，於2021年3月22日服刑完畢，即日從內地移交至本港，此後一直還柙，至去年7月15日在妨礙司法公正案中被判監10個月，再於翌日在藏汽油彈材料及半製成品案件中被判監28個月，法官游德康下令兩案部份刑期同期執行，總刑期為31個月。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4bM6qmYu92" title="無標題"><img src="https://live.staticflickr.com/65535/52577137568_436aeac836_z.jpg" alt="無標題" /></a><br /><em>資料圖片</em></p>
 <p>判詞透露，懲教署指扣除還柙日數後，把鄭視為已經在「妨礙司法公正」案判刑當日被視為服刑完畢，故沒法遵循翌日法官游德康就汽油彈案部份刑期同期執行的命令。游官以後記形式在「判刑理由書」表示，若他判刑前知悉鄭在另一案已服刑完畢，會將刑期下調至21個月，以達至總刑期31個月，惟他已完成汽油彈案的職份，無權更改刑期。游官建議鄭考慮提出上訴以修補判刑上的缺陷。</p>
 <p>鄭由大律師吳靄儀和高麟代表。書面陳詞指出，根據《監獄條例》第69條，若獄中行為良好可獲三分一刑期扣減，若按原審法官判刑原意，以及假設此69條適用於兩案，鄭最早可獲釋的日子應為2022年12月。即使該條例只適用於汽油彈一案，鄭也最遲可於2023年3月23日獲釋，若果未能保釋外出，鄭很可能在上訴聆訊之前已服刑完畢或服畢大部份刑期。</p>
