--- a/_posts/2023-01-04-PQ-克羅埃西亞採歐元入申根成為完全歐盟成員國-歐盟外部邊界向南移動.html
+++ b/_posts/2023-01-04-PQ-克羅埃西亞採歐元入申根成為完全歐盟成員國-歐盟外部邊界向南移動.html
@@ -8,7 +8,7 @@ tags: blog
 author: 王雪俐
 ---
 
-<p><strong>2013 年克羅埃西亞加入歐盟</strong>，2023 年 1 月 1 日起，克羅埃西亞正式<strong>採用歐元</strong>並加入<strong>無國界申根區</strong>，至此<strong>成為完全的歐盟成員國</strong>。總理普蘭科維奇（Andrej Plenkovic）表示，採用歐元能讓克羅埃西亞免於金融危機，加入申根區、取消邊境檢查，則大有利於克羅埃基亞的觀光發展，克羅埃西亞人更是無需工作或觀光簽證，就能夠旅行申根區所有國家。</p>
+<p><strong>2013 年克羅埃西亞加入歐盟</strong>，2023 年 1 月 1 日起，克羅埃西亞正式<strong>採用歐元</strong>並加入<strong>無國界申根區</strong>，至此<strong>成為完全的歐盟會員國</strong>。總理普蘭科維奇（Andrej Plenkovic）表示，採用歐元能讓克羅埃西亞免於金融危機，加入申根區、取消邊境檢查，則大有利於克羅埃基亞的觀光發展，克羅埃西亞人更是無需工作或觀光簽證，就能夠旅行申根區所有國家。</p>
 
 
 
@@ -24,7 +24,7 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5817350a-歐盟、克羅埃西亞-1024x717.png" alt="" class="wp-image-124605" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5817350a-歐盟、克羅埃西亞-1024x717.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5817350a-歐盟、克羅埃西亞-300x210.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5817350a-歐盟、克羅埃西亞-768x537.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5817350a-歐盟、克羅埃西亞-1536x1075.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5817350a-歐盟、克羅埃西亞-2048x1433.png 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>2013 年克羅埃西亞加入歐盟，2023 年 1 月 1 日起，克羅埃西亞正式採用歐元並加入無國界申根區，至此成為完全的歐盟成員國</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/63611c07-歐盟、克羅埃西亞-1024x785.png" alt="" class="wp-image-124700" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/63611c07-歐盟、克羅埃西亞-1024x785.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/63611c07-歐盟、克羅埃西亞-300x230.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/63611c07-歐盟、克羅埃西亞-768x588.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/63611c07-歐盟、克羅埃西亞-1536x1177.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/63611c07-歐盟、克羅埃西亞.png 1702w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>2013 年克羅埃西亞加入歐盟，2023 年 1 月 1 日起，克羅埃西亞正式採用歐元並加入無國界申根區，至此成為完全的歐盟成員國</figcaption></figure>
 
 
 
