--- a/_posts/2023-01-05-INMEDIA-國安處拘24歲男子-涉發布煽動訊息宣揚港獨.html
+++ b/_posts/2023-01-05-INMEDIA-國安處拘24歲男子-涉發布煽動訊息宣揚港獨.html
@@ -10,4 +10,5 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/202301057.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">【獨媒報導】</font>警務處國安處今（5日）早拘捕一名24歲男子，涉嫌違反香港法例第200章《刑事罪行條例》第九和十條「作出具煽動意圖的作為」罪。警方指，被捕男子涉嫌在2022年11月至12月期間，在社交平台持續發布具煽動意圖的訊息，包括宣揚港獨主義、煽動他人推翻中央政府及香港政府、引起他人憎恨司法機構、法官及執法人員，以及呼籲抵制防疫政策等。男子現正被扣留調查。</p>
 <p>警方根據法庭手令，搜查被捕男子的住所，檢獲曾用作發布煽動意圖訊息的電子通訊工具。 警方提醒市民，「作出具煽動意圖的作為」罪屬嚴重罪行，首次定罪已可被判處監禁兩年，呼籲市民切勿以身試法。</p>
+<p>據了解，該名男子曾多次在連登討論區發帖，就人大釋法、理大圍城案衝突判刑及防疫政策議題作評論，當中被指涉及港獨，及反對中央及特區政府的政策。</p>
 </div></div></div>
