Update VOCUS 2023-01-06 patch

--- a/_posts/2023-01-04-VOCUS-串流王者-聽音樂要付費嗎.html
+++ b/_posts/2023-01-04-VOCUS-串流王者-聽音樂要付費嗎.html
@@ -55,4 +55,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">絕大多數小說家就算透過上架電子書平台，能獲得的稿費依舊無法支撐生活，而在博客來、讀冊還有一些原先網路平台開始販售電子書時，幾乎約一半或三分之一的銷量是由通路平台賺取，在到出版社與作家分潤時已無太多。</div>
 <div class="draft-block draft--p left">故無法支撐生活讓願意創作故事的人越來越少，連帶的台灣小說圈的新一代如今無法崛起也無法有知名作家誕生，而就算台灣沒有，商家可以從日韓甚至中國找作品替代，台灣小說產業就等同於回到吃老本、為數不多的老作家繼續持續的局面。</div>
 <div class="draft-block draft--p left">故，如《串流王者》的最初對創業者的敘述讓新創老闆有所共鳴，最後的歌手環節絕對於是廣告創作者的心聲。而在兩方之餘獲得利益的永遠還是財團，底下的創作者能持之以恆不被現實打垮的能有多少？在無法像Youtuber透過點讚訂閱人數賺取廣告利潤的一些默默耕耘的創作者們，這個時代是要將其淘汰，還是繼續共創雙贏？仍取決於對於將來創作價值會值多少？</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/VtvfbGRDJbY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/VtvfbGRDJbY"></iframe></div>
