--- a/_posts/2023-01-04-VOCUS-心想事成-原來是這樣啊.html
+++ b/_posts/2023-01-04-VOCUS-心想事成-原來是這樣啊.html
@@ -36,11 +36,8 @@ author: 泰太
 <div class="draft-block draft--p left">最近的我，較常回想過去的念頭與現在事件之間的連結，有時候覺得很有趣。也許當下看似毫無關聯，<span style="text-decoration: underline; ">但若是沒有 1 就無法走到 2，更不會橫空跑出 3。</span></div>
 <div class="draft-block draft--p left">如果我沒有開始寫方格子，<br>也沒有開始做Podcast，<br>這一切都不會發生，<br>我只是個在螢幕後按讚按愛心和留言的人。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">好的念頭 + 正確行動 = 好事發生<br>念頭 + 行動 = 心想事成 </span></div>
-<div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1534196511436-921a4e99f297?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDR8fGRyZWFtJTIwY29tZSUyMHRydWV8ZW58MHx8fHwxNjY4OTUxODc2&amp;ixlib=rb-4.0.3&amp;q=80" data-width="3598" data-height="5397" data-source="{&quot;name&quot;:&quot;Peter Fogden&quot;,&quot;url&quot;:&quot;https://unsplash.com/@petefogden&quot;,&quot;provider&quot;:&quot;Unsplash&quot;}" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1534196511436-921a4e99f297"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">這篇是關於近期生活中的一些體悟，也順便預告以後的文章類型比較不會著重於泰國時事與新聞了，因為會在<a href="https://www.thenewslens.com/author/imthaitai" target="_blank" class="draft--a">這裡</a>出現 ▼</div>
 <div><h3><a href="https://www.thenewslens.com/author/imthaitai">泰太 - 最新文章 - The News Lens 關鍵評論網</a></h3><span>一不小心來泰國就待了九年的怪咖，目前在Podcast《泰太太想說》裡說話，脫離好熱好辣好便宜的泰國，想用真實生活與你聊一聊。 最新文章 相關標籤: 泰國, 東南亞, 槍枝, 擁槍率, 犯罪, 幼兒園, 泰緬邊境, 大其力, 美賽, 緬甸</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fimage1.thenewslens.com%2FAvatars%2F66321%2F3vligzhzyeka8fs1m5ysfcsfhk8iad.jpg%3Fauto%3Dcompress%26h%3D250%26q%3D80%26w%3D250&amp;width=550&amp;sign=We3QP_tuZ4ospAddeo_K_OQHncM_luk_tX0e4B8hppU"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Podcast </span><a href="https://open.firstory.me/user/taicountry/platforms" target="_blank" class="draft--a">泰太太想說</a><br><span style="font-weight: bold; ">Instargram </span><a href="https://www.instagram.com/taicountry/" target="_blank" class="draft--a">@taicountry</a></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">底下拍拍手，輕鬆支持我 ↓</span></div>
-<div class="draft-block draft--p left"></div>
