--- a/_posts/2023-01-04-VOCUS-原來妳不是不愛我-只是我不知道妳愛我.html
+++ b/_posts/2023-01-04-VOCUS-原來妳不是不愛我-只是我不知道妳愛我.html
@@ -17,7 +17,6 @@ author: 泰太
 <h2 class="draft-block draft--h2" name="header-6olj7">孩子知道你愛他嗎</h2>
 <div class="draft-block draft--p left">2010年，在結束了外地求學、工作、澳洲打工渡假後，我回到了所生長的地方台中。隔年，找了一份離家近也看似安穩的工作，那時候開始接觸到<a href="https://search.books.com.tw/search/query/key/%E6%B1%AA%E5%9F%B9%E7%8F%BD/adv_author/1/" target="_blank" class="draft--a">汪培珽</a>的書，而這一本《孩子知道你愛他嗎》光是書名就讓我震撼，喃喃自語地問自己，<span style="font-weight: bold; ">我知道嗎？我好像知道應該知道，但我有感受到嗎？</span></div>
 <div class="draft-block draft--p left">雖然十一年前的我，那時候還沒有小孩，但也讀了好幾本她所寫的書，一邊讀一邊當作提前學習，反正也可以應用在自己的教學上面。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-83hs">沒有答案的疑問</h2>
 <div class="draft-block draft--p left">前陣子終於回台灣了，隔了三年半再回家後，心裡有點激動與期待。然而，面對我的不是這些，而是那些無處發洩的負面情緒和言語，當下只想著承接與解決，也覺得自己必須堅強和溫柔，不能硬碰硬。面對漠視與忽略，也告訴自己，沒關係，先解決難題再說吧！</div>
 <div class="draft-block draft--p left">在難題解決之後，在閱讀【蛤蟆先生去看心理師】的過程中，我才崩潰大哭了起來。<span style="font-weight: bold; ">你愛我嗎？但為什麼呢？好多為什麼在心裡紛紛冒出來</span>，我在泰國都九年了，為什麼妳好像都不在乎我在這裡的生活？為什麼都不問？為什麼連我入圍什麼獎項都不問，都不好奇嗎？為什麼我們之間的話題只能圍繞在有限的範圍裡。</div>
@@ -30,5 +29,5 @@ author: 泰太
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">注意行動，而非言語</span>，言語能夠用隱瞞來掩飾，但行動不能<span style="font-weight: bold; ">。</span>她記得我愛吃蘿蔔糕，總會在我回台灣前就先去市場買好放在冰箱裡，即便她自己不吃。她知道我很愛喝水，總會提醒爸爸要多準備冷開水，不要都拿去燒成熱的來泡茶。她會放一些覺得有用的小物品在房間等我回來，雖然有些小物品會放到過期。</div>
 <div class="draft-block draft--p left">以往總是每週打電話給妳的我，已經二週沒打了。</div>
 <div class="draft-block draft--p left">「喂，媽，妳在做什麼呀？」，撥了通電話後的我，在LINE上這麼問。</div>
-<div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1618548685060-84790e8344b5?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDR8fHBhcmVudHxlbnwwfHx8fDE2NzA2ODcxNjI&amp;ixlib=rb-4.0.3&amp;q=80" data-width="3024" data-height="3898" data-source="{&quot;name&quot;:&quot;Suzi Kim&quot;,&quot;url&quot;:&quot;https://unsplash.com/@kimsuzi08&quot;,&quot;provider&quot;:&quot;Unsplash&quot;}" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1618548685060-84790e8344b5"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <blockquote class="draft-block draft--blockquote">泰太悄悄說：<br>其實此篇是寫給自己療癒的，有想過說另開一個【樹洞】專題，但有點懶得分類了，就索性都放在這吧！謝謝你讀到最後 🙏</blockquote>
