--- a/_posts/2023-01-04-PQ-克羅埃西亞採歐元入申根成為完全歐盟成員國-歐盟外部邊界向南移動.html
+++ b/_posts/2023-01-04-PQ-克羅埃西亞採歐元入申根成為完全歐盟成員國-歐盟外部邊界向南移動.html
@@ -8,11 +8,19 @@ tags: blog
 author: 王雪俐
 ---
 
-<p><strong>2013 年克羅埃西亞加入歐盟</strong>，2023 年 1 月 1 日起，克羅埃西亞正式<strong>採用歐元</strong>並加入<strong>無國界申根區</strong>，至此<strong>成為完全的歐盟會員國</strong>。總理普蘭科維奇（Andrej Plenkovic）表示，採用歐元能讓克羅埃西亞免於金融危機，加入申根區、取消邊境檢查，則大有利於克羅埃基亞的觀光發展，克羅埃西亞人更是無需工作或觀光簽證，就能夠旅行申根區所有國家。</p>
+<p><strong>2013 年克羅埃西亞加入歐盟</strong>，2023 年 1 月 1 日起，克羅埃西亞正式<strong>採用歐元</strong>並加入<strong>無國界申根區</strong>，至此<strong>成為完全的歐盟會員國</strong>。</p>
 
 
 
-<p>克羅埃西亞僅有 400 萬人口，1991 年宣布自南斯拉夫獨立，經過四年的戰爭贏得獨立，但戰爭奪走兩萬人命，數十萬人流離失所，更讓克羅埃西亞經濟縮水達 25%。2013 年克羅埃西亞加入歐盟，但要採用歐元，必須滿足一系列嚴格條件，包括匯率穩定、通膨控制和穩健的公共支出等，克羅埃西亞花費近十年時間才終於達標。</p>
+<p>總理普蘭科維奇（Andrej Plenkovic）表示，克羅埃西亞<strong>採用歐元，免於金融危機</strong>；<strong>加入申根區、取消邊境檢查，則大有利於克羅埃基亞的觀光發展</strong>；克羅埃西亞人更是無需工作或觀光簽證，就能夠<strong>旅行申根區所有國家</strong>。</p>
+
+
+
+<p>克羅埃西亞僅有 400 萬人口，<strong>1991 年宣布自南斯拉夫獨立</strong>，經過四年的戰爭贏得獨立，但戰爭奪走兩萬人命，數十萬人流離失所，更讓克羅埃西亞經濟縮水達 25%。</p>
+
+
+
+<p><strong>2013 年克羅埃西亞加入歐盟</strong>，但要採用歐元，必須滿足一系列嚴格條件，包括匯率穩定、通膨控制和穩健的公共支出等，克羅埃西亞花費近十年時間才終於達標。</p>
 
 
 
@@ -28,11 +36,23 @@ author: 王雪俐
 
 
 
-<p>午夜之前，內政部長抵達克羅埃西亞與斯洛維尼亞的布瑞加納（Bregana）邊境檢查站，向最後一批接受邊境檢查的旅客祝願好運。斯洛維尼亞早在 2007 年便已加入申根區，和克羅埃西亞的邊界是歐盟的外部邊界。隨著克羅埃西亞取消與斯洛維尼亞和匈牙利的邊境，歐盟的外部邊界移動到克羅埃西亞和波士尼亞與赫塞哥維納、塞爾維亞、蒙特內哥羅之間，保護外部邊界的責任也由克羅埃西亞接手。與克羅埃西亞接壤的波士尼亞等三國（以及更南方的北馬其頓和科索沃）都還處於入盟談判早期階段，可以預想這外部邊界還將維持相當時間。</p>
+<p>午夜之前，內政部長抵達克羅埃西亞與斯洛維尼亞的布瑞加納（Bregana）邊境檢查站，向最後一批接受邊境檢查的旅客祝願好運。斯洛維尼亞早在 2007 年便已加入申根區，和克羅埃西亞的邊界是歐盟的外部邊界。</p>
 
 
 
-<p>許多克羅埃西亞人記得 31 年前對抗南斯拉夫的獨立戰爭，很高興能夠活著見到克羅埃西亞完全融入歐盟的一天。不過採用歐元也多少引起憂慮。專家表示，俄羅斯入侵烏克蘭導致食品與燃料價格飆升和全球性的通貨膨脹，採用歐元有助於保護克羅埃西亞經濟，但反對意見認為，儘管歐元上路多年，但單一貨幣卻在不同國家有不同稅率和財務規則，以至於至今無人透徹了解歐元如何運作，歐元依舊是個邊做邊學的貨幣。希臘經濟危機和西班牙、葡萄牙的案例都顯示，歐元統整歐洲，但也可以分化歐洲。《德國之聲》的一篇評論指出，「歐盟富裕國家和貧窮國家差距不斷拉大，引進歐元並不能挽救克羅埃西亞的許多問題」。</p>
+<p>隨著克羅埃西亞取消與斯洛維尼亞和匈牙利的邊境，歐盟的外部邊界移動到克羅埃西亞和波士尼亞與赫塞哥維納、塞爾維亞、蒙特內哥羅之間，保護外部邊界的責任也由克羅埃西亞接手。與克羅埃西亞接壤的波士尼亞等三國（以及更南方的北馬其頓和科索沃）都還處於入盟談判早期階段，可以預想這外部邊界還將維持相當時間。</p>
+
+
+
+<p>許多克羅埃西亞人記得 31 年前對抗南斯拉夫的獨立戰爭，很高興能夠活著見到克羅埃西亞完全融入歐盟的一天。不過採用歐元也多少引起憂慮。</p>
+
+
+
+<p>專家表示，<strong>俄羅斯入侵烏克蘭</strong>，導致食品與燃料價格飆升、全球性的通貨膨脹，採用歐元有助於保護克羅埃西亞經濟，但反對意見認為，儘管歐元上路多年，但單一貨幣卻在不同國家有不同稅率和財務規則，以至於至今無人透徹了解歐元如何運作，歐元依舊是個邊做邊學的貨幣。</p>
+
+
+
+<p>希臘經濟危機和西班牙、葡萄牙的案例都顯示，歐元統整歐洲，但也可以分化歐洲。《德國之聲》的一篇評論指出，「<strong>歐盟富裕國家和貧窮國家之間的差距，不斷拉大</strong>，引進歐元並不能挽救克羅埃西亞的許多問題」。</p>
 
 
 
