--- a/_posts/2023-01-05-PQ-歐盟-鼓勵-對中國旅客進行隨機檢測-中方-不可接受.html
+++ b/_posts/2023-01-05-PQ-歐盟-鼓勵-對中國旅客進行隨機檢測-中方-不可接受.html
@@ -8,11 +8,11 @@ tags: blog
 author: 陸 瑪丁
 ---
 
-<p>鑑於2023 年 1 月 8 日起，中國取消旅遊限制，歐盟理事會於 1 月 4 日發表聲明，「強烈鼓勵」27 個會員國，針對 Covid-19 疫情下，對中國旅客採取管制措施，這些建議將於 1 月 9 日生效。</p>
+<p>鑑於2023 年 1 月 8 日起，中國取消旅遊限制，歐盟理事會於 1 月 4 日發表聲明，「強烈鼓勵」27 個會員國，針對 Covid-19 疫情下，對中國旅客採取管制措施，這些<strong>建議將於 1 月 9 日生效</strong>。</p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/29f363bc-中國東方航空-1024x682.jpeg" alt="" class="wp-image-124721" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/29f363bc-中國東方航空-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/29f363bc-中國東方航空-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/29f363bc-中國東方航空-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/29f363bc-中國東方航空.jpeg 1280w" sizes="(max-width: 590px) 100vw, 590px" /><figcaption>歐盟將對中國旅客採取管制措施。（圖／中國東方航空）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/29f363bc-中國東方航空-1024x682.jpeg" alt="" class="wp-image-124721" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/29f363bc-中國東方航空-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/29f363bc-中國東方航空-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/29f363bc-中國東方航空-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/29f363bc-中國東方航空.jpeg 1280w" sizes="(max-width: 735px) 100vw, 735px" /><figcaption>歐盟將對中國旅客採取管制措施。（圖／中國東方航空）</figcaption></figure></div>
 
 
 
@@ -20,11 +20,11 @@ author: 陸 瑪丁
 
 
 
-<p>歐盟「強烈鼓勵」於從中國前往歐洲的旅客，於 48 小時前的陰性檢測證明、往返中國配戴 N95 等醫用級口罩，更「鼓勵」對飛機廢水進行檢驗、對中國旅客進行「隨機檢測」等措施。</p>
+<p>歐盟「強烈鼓勵」從中國前往歐洲的旅客，於 48 小時前的陰性檢測證明、往返中國配戴 N95 等醫用級口罩，更<strong>「鼓勵」對飛機廢水進行檢驗</strong>、<strong>對中國旅客進行「隨機檢測」</strong>等措施。</p>
 
 
 
-<p>這項不具法律效力的措施，<strong>是由歐盟「綜合政治危機應對」機構（The integrated political crisis response, IPCR）所做出決定</strong>，這個機構起於 2000 年，在 2018 年正式成立，目的在幫助發生重大和複雜危機時，如歐盟移民危機、新冠肺炎疫情、俄烏戰爭等，歐盟如何在政治層面做出快速和一致的決策。</p>
+<p>這項不具法律效力的措施，<strong>是由歐盟「整合性政治危機因應」機構（The integrated political crisis response, IPCR）所做出決定</strong>，這個機構起於 2000 年，在 2018 年正式成立，目的在幫助發生重大和複雜危機時，如歐盟移民危機、新冠肺炎疫情、俄烏戰爭等，歐盟如何在政治層面做出快速和一致的決策。</p>
 
 
 
@@ -32,11 +32,11 @@ author: 陸 瑪丁
 
 
 
-<p>歐盟在聲明當中還提到要持續對歐洲流行病進行檢測以及監控中國的疫情狀況；以及相關數據共享，已採取後續的相關措施，並在一月中旬進行檢討。</p>
+<p>歐盟在聲明當中還提到要持續對歐洲流行病進行檢測、監控中國的疫情狀況、共享相關數據，以採取後續的相關措施，並在一月中旬進行檢討。</p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4109b751-截圖-2023-01-05-下午5.07.12-1024x676.png" alt="" class="wp-image-124722" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4109b751-截圖-2023-01-05-下午5.07.12-1024x676.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4109b751-截圖-2023-01-05-下午5.07.12-300x198.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4109b751-截圖-2023-01-05-下午5.07.12-768x507.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4109b751-截圖-2023-01-05-下午5.07.12.png 1036w" sizes="(max-width: 694px) 100vw, 694px" /><figcaption>歐盟「強烈鼓勵」於從中國前往歐洲的旅客，於 48 小時前的陰性檢測證明。<br>圖為中國執行防疫人員（圖／人民網）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4109b751-截圖-2023-01-05-下午5.07.12-1024x676.png" alt="" class="wp-image-124722" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4109b751-截圖-2023-01-05-下午5.07.12-1024x676.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4109b751-截圖-2023-01-05-下午5.07.12-300x198.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4109b751-截圖-2023-01-05-下午5.07.12-768x507.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4109b751-截圖-2023-01-05-下午5.07.12.png 1036w" sizes="(max-width: 719px) 100vw, 719px" /><figcaption>歐盟「強烈鼓勵」於從中國前往歐洲的旅客，於 48 小時前的陰性檢測證明。<br>圖為中國執行防疫人員（圖／人民網）</figcaption></figure></div>
 
 
 
@@ -44,15 +44,19 @@ author: 陸 瑪丁
 
 
 
-<p>早在各國相繼對中國旅遊採取限制，1 月 3 日，中國外交部發言人毛寧接受記者詢問時，提到「中國認為要求陰性檢測證明缺乏科學根據外，認為此舉不能接受。」</p>
+<p>早在各國相繼對中國旅遊採取限制，1 月 3 日，中國外交部發言人毛寧接受記者詢問時，提到要求中國旅客「陰性檢測證明，缺乏科學根據，此舉不能接受。」</p>
 
 
 
-<p>她進一步將各國對於中國旅遊採取的疫情防控措施，引導至政治目的，也會採取相應措施，甚至是一種歧視性作法。「中方對試圖操弄疫情防控措施，以達到政治目的的做法表示堅決反對，將針對不同情況，本著對等原則，採取相應措施。〔&#8230;〕中方始終認為，各國的防疫措施應當科學適度，不應借機搞政治操弄，不應有歧視性做法，不應影響正常的人員交往和交流合作。」</p>
+<p>毛寧進一步對於國際社會將對中國旅客採取的疫情防控措施，藉機進行政治操弄，甚至是一種歧視性作法。中國也會採取相應措施。</p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8c7c5891-毛寧.jpeg" alt="" class="wp-image-124724"/><figcaption>中國外交部發言人毛寧。（圖／中國外交部）</figcaption></figure></div>
+<p>毛寧說到：「中方對試圖操弄疫情防控措施，以達到政治目的的做法，表示堅決反對，將針對不同情況，本著對等原則，採取相應措施。〔&#8230;〕中方始終認為，各國的防疫措施應當科學適度，不應借機搞政治操弄，不應有歧視性做法，不應影響正常的人員交往和交流合作。」</p>
+
+
+
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8c7c5891-毛寧.jpeg" alt="" class="wp-image-124724"/><figcaption>中國外交部發言人毛寧。（圖／中國外交部）</figcaption></figure></div>
 
 
 
