--- a/_posts/2023-01-06-PQ-中國入境韓國旅客陽性率約2成6-拒隔離而逃跑的中國男子抓到了.html
+++ b/_posts/2023-01-06-PQ-中國入境韓國旅客陽性率約2成6-拒隔離而逃跑的中國男子抓到了.html
@@ -8,7 +8,7 @@ tags: blog
 author: 林貝利
 ---
 
-<p>為防止不透明的中國疫情蔓延至韓國，韓國在 1 月 2 日加強了邊境管制措施，所有從中國入境的旅客都必須接受 PCR 篩檢，首日陽性率為 19.7%，首 3 日平均陽性率為 25.8%。3 日一名從韓國仁川國際機場入境的 41 歲中國男子被驗出陽性反應後，拒絕 7 天在飯店的隔離並逃跑。經過韓國警方的追蹤已在 5 日找回該男子並送至隔離設施。</p>
+<p>為防止不透明的中國疫情蔓延至韓國，韓國在 1 月 2 日加強了邊境管制措施，所有從中國入境的旅客都必須接受 PCR 篩檢，持短期簽證的旅客首日陽性率為 19.7%，首 3 日平均陽性率為 25.8%。3 日一名從韓國仁川國際機場入境的 41 歲中國男子被驗出陽性反應後，拒絕 7 天在飯店的隔離並逃跑。經過韓國警方的追蹤已在 5 日找回該男子並送至隔離設施。</p>
 
 
 
