--- a/_posts/2023-01-06-PQ-擺脫依賴俄製風險-日本協助烏克蘭更換美製核能反應爐.html
+++ b/_posts/2023-01-06-PQ-擺脫依賴俄製風險-日本協助烏克蘭更換美製核能反應爐.html
@@ -28,7 +28,7 @@ author: 陳怡菱
 
 
 
-<p>美國核能反應爐製造商有來自日本企業的出資，也需要日本供應關鍵零件，像是美國 NuScale 就有來自「日揮控股公司（JGC Holdings Corporation ，日本最大綜合工程設計公司，主要業務為製造生產成品的生產設備，在石油類工程頗負盛名）」和「 IHI 公司」的出資。當美國製造商向烏克蘭出口核電廠時「必須要有日本企業的協助」（日本政府官員）。日本政府預估日本企業在烏克蘭換美製反應爐過程中需要供應零件並承擔反應爐的維修工作，將透過日本國際協力銀行（JBIC，日本執行政府開發援助的主要機構之一）的貸款來支援這些費用。</p>
+<p>美國核能反應爐製造商有來自日本企業的出資，也需要日本供應關鍵零件，像是美國 NuScale 就有來自「日揮控股公司（JGC Holdings Corporation ，日本最大綜合工程設計公司，主要業務為製造生產成品的生產設備，在石油類工程頗負盛名）」和「 IHI 公司」的出資。所以在美國製造商向烏克蘭出口核電廠時「必須要有日本企業的協助」（日本政府官員）。日本政府預估日本企業在烏克蘭換美製反應爐過程中需要供應零件並承擔反應爐的維修工作，將透過日本國際協力銀行（JBIC，日本執行政府開發援助的主要機構之一）的貸款來支援這些費用。</p>
 
 
 
