--- a/_posts/2023-01-06-INMEDIA-告別18年專賣古書的梅馨書舍-老闆-理解年青人關心社會-不再鑽研古代詩詞.html
+++ b/_posts/2023-01-06-INMEDIA-告別18年專賣古書的梅馨書舍-老闆-理解年青人關心社會-不再鑽研古代詩詞.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/%E6%A2%85%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>專賣二手古書的梅馨書舍周一（2日）宣布結業，做到今年2月底，剛好是18年歲月。老闆鄭廣文憶述書舍2005年在西洋菜南街66號6樓開張，當時人流不多，也沒有很多水貨客，但整條街前後卻有二十幾間書店。後來愈來愈多像他們的樓上書店開張，單看他們身處的這棟7層唐樓，就有專售文史哲的序言書室、賣教科書的華英書局。</p>
-<p>香港飽歷三年疫情，市道低迷，加上不少舊客移民他方，鄭廣文今年年初，無奈在梅馨書舍的木牌前，貼上以毛筆書寫的「結業清貨」。在門前的對聯，同樣是他今年所作：「書齋無歲月，人世有春秋」仿佛無聲地回應——縱然人事變遷、書舍停業，惟書本蘊藏的知識與智慧將永遠長留。</p>
+<p>香港飽歷三年疫情，市道低迷，加上不少舊客移民他方，鄭廣文今年年初，無奈在梅馨書舍的木牌前，貼上以毛筆書寫的「結業清貨」。在門前的對聯，同樣是他今年所作：「書齋無歲月，人世有春秋」彷彿無聲地回應——縱然人事變遷、書舍停業，惟書本蘊藏的知識與智慧將永遠長留。</p>
 <p>疫情以外，他亦留意到年青人對梅馨書舍專售的古代、文史、詩詞類別不太感興趣。被問及會否覺得可惜時，他笑著搖頭：「這幾年社會變化那麼大，對吧？年青人有年青人的需要，他們覺得社科類的書可解答他心中問題，我覺得可以理解。年青人當然有道理的。如果他們不關心（社會），全部走去鑽研歷史、古代詩詞，反而未必是好事。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/S62te694W4" title="IMG_5848"><img src="https://live.staticflickr.com/65535/52608373984_c8056f76db_b.jpg" width="1024" alt="IMG_5848" /></a></p>
 <p><strong>自小與書香結緣 創梅馨書舍不為賺錢</strong></p>
