--- a/_posts/2023-01-06-INMEDIA-港鐵-落馬洲站準備就緒通關-首日額外加派100名職員.html
+++ b/_posts/2023-01-06-INMEDIA-港鐵-落馬洲站準備就緒通關-首日額外加派100名職員.html
@@ -21,4 +21,5 @@ author: 獨媒報導
 <p>據《獨媒》記者今日在現場視察，站內部分商舖已有職員進行裝修及入貨工作。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/F04Lci1j06" title="無標題"><img src="https://live.staticflickr.com/65535/52609392517_10bc2cef97_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/sB7D9c6F87" title="無標題"><img src="https://live.staticflickr.com/65535/52610390623_d9c91ab5a4_b.jpg" width="1024" alt="無標題" /></a></p>
+<p>冠忠巴士集團旗下的跨境環島通，亦將於1月8日恢復服務，每日提供約150個班次，往來市區至深圳灣口岸，並將逐步恢復往來廣州等地的直通巴士服務。</p>
 </div></div></div>
