--- a/_posts/2023-01-06-INMEDIA-理大圍城-20歲男生供稱自發到場急救-扶傷者入窄巷時遭推跌及被捕.html
+++ b/_posts/2023-01-06-INMEDIA-理大圍城-20歲男生供稱自發到場急救-扶傷者入窄巷時遭推跌及被捕.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/poly%201290.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年11月「理大圍城」，大批市民響應號召前往「營救」被困示威者，其中油麻地共有213人被圍捕，全被控暴動罪並分成多案起訴。其中18人否認控罪，今（6日）於區域法院（移師西九龍法院）續審。法官游德康早前裁定表證成立，案發時20歲的男學生親自作供，稱當晚自發到場提供急救服務，他扶一名腳掌流血的中年漢進入窄巷期間，遭大量湧入窄巷的人群推跌，之後被捕。休庭期間，有旁聽人士向控方高叫道：「浪費公帑！」法官隨即步回座位，向該旁聽人士表示：「我唔同意你嘅講法」。</p>
+<img src="https://www.inmediahk.net/files/column_images/poly%201290.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年11月「理大圍城」，大批市民響應號召前往「營救」被困示威者，其中油麻地共有213人被圍捕，全被控暴動罪並分成多案起訴。其中18人否認控罪，今（6日）於區域法院（移師西九龍法院）續審。法官游德康早前裁定表證成立，案發時20歲的男學生親自作供，稱當晚自發到場提供急救服務，他扶一名腳掌流血的中年漢進入窄巷期間，遭大量湧入窄巷的人群推跌，之後被捕。休庭期間，有旁聽人士向控方高叫道：「浪費公帑！」法官隨即步回座位，向該旁聽人士表示：「我唔同意你嘅講法。」</p>
 <p><strong>20歲男學生供稱自發到場急救</strong></p>
 <p>第二被告呂鋒（案發時20歲）供稱，他於2019年11月1日正式成為聖約翰救傷隊成員，案發當日不需當值，但選擇自發到場協助傷者。由於救傷隊清楚規定成員在非當值時段不能穿制服和帶含聖約翰標誌的藥包，所以他只帶了一張聖約翰急救證到場。</p>
 <p>呂供稱，晚上約10時由東涌住所出發，乘地鐵到達大角咀，之後沿亞皆老街前往旺角。他稱，為了顯示自己沒有立場，特地穿上白色上衣，又表示不論路人、警察還是示威者，都會提供援助，以符合聖約翰救傷隊宗旨和個人原則。</p>
