--- a/_posts/2023-01-09-VOCUS-泰太公告-終止付費專題-所有文章免費閱讀.html
+++ b/_posts/2023-01-09-VOCUS-泰太公告-終止付費專題-所有文章免費閱讀.html
@@ -8,7 +8,6 @@ tags: blog
 author: 泰太
 ---
 
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://vocus.cc/article/63ad10c3fd8978000180d471">You've got mail 您有一封新郵件｜方格子 vocus</a></h3><span>你有多久沒有收到一封信，或許有多久沒有寫一封信呢？ 記得在2015年，瀏覽到一個關於發起寫信活動的網站，有憂鬱症的女孩，不知道該怎麼生活下去，感到無助也無依無靠。於是有人發起了寫信的活動，就算在茫茫的網路大海中，你我互相不認識，但發起人相信文字有一種力量。 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252Fe6939be7-3fd8-4be1-b4ef-192ac638f310.jpg%26width%3D1200%26sign%3DsHxeXwO01u3sUQMlgKpJLfFGFov1Z7vTko0MujnvuR0&amp;width=550&amp;sign=bmVHVELNaJ4U_ChxzlyWSDcy5pEEPi0ybUjRLAZAMqs"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">《承上篇》</span></div>
 <h2 class="draft-block draft--h2" name="header-bdnvd">手寫信</h2>
@@ -27,15 +26,13 @@ author: 泰太
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">如果以關鍵字來下總結，2020起飛年，2021幸運年，2022意義年。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">雖然2023才開始，但我想先賜個封號為本質年。</span></div>
 <div class="draft-block draft--p left">回歸簡單的美好，在千禧時代的我們，和網路還太不熟，沒有各式花樣的社群媒體，而成立於1998年的Google還是個小嬰兒，Facebook更是在2004年才出生。在那個用雅虎奇摩的年代，打開Email信件夾都是朋友轉發的有趣事(當然有些也很無聊)，而網路小說<a href="http://big5.quanben-xiaoshuo.com/n/douyu/" target="_blank" class="draft--a">〈鬥魚〉</a>，就是那時轉發的大熱門啊！</div>
-<div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1669554108285-dc5c2786ed61?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDExfHwyMDIzfGVufDB8fHx8MTY3MjkwNDU1OQ&amp;ixlib=rb-4.0.3&amp;q=80" data-width="3500" data-height="2000" data-source="{&quot;name&quot;:&quot;Planet Volumes&quot;,&quot;url&quot;:&quot;https://unsplash.com/@planetvolumes&quot;,&quot;provider&quot;:&quot;Unsplash&quot;}" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1669554108285-dc5c2786ed61?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDExfHwyMDIzfGVufDB8fHx8MTY3MjkwNDU1OQ&amp;ixlib=rb-4.0.3&amp;q=80" data-width="3500" data-height="2000" data-source="{&quot;name&quot;:&quot;Planet Volumes&quot;,&quot;url&quot;:&quot;https://unsplash.com/@planetvolumes&quot;,&quot;provider&quot;:&quot;Unsplash&quot;}" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <h2 class="draft-block draft--h2" name="header-4889r">感謝你</h2>
 <div class="draft-block draft--p left">我想念一些簡單與純粹，在2023的本質年裡，請先讓我感謝你陪我走到這，無論是方格子的讀者或是Podcast的聽眾，你的閱讀與聆聽也是一種陪伴我的方式。</div>
 <div class="draft-block draft--p left">特別謝謝願意付費訂閱專題的每一位，特別是默默支持兩年多的元老們。如今，泰太決定將<span style="font-weight: bold; ">所有文章都設為免費閱讀，也取消付費專題</span>。</div>
 <div class="draft-block draft--p left">今後，也<span style="font-weight: bold; ">開始提供訂閱Email電子報的服務</span>，會有新文章上架通知、podcast節目停更後的動向、生活中的大小事分享，或是書籍電影讀後感，都會是電子報的內容。</div>
 <div class="draft-block draft--p left">當然，也很歡迎你在收到Email後，有什麼想說的或想聊的，都可以直接以信件方式回覆，我們可以一起透過線上信件互相來聊一聊。</div>
 <div class="draft-block draft--p center"><a href="https://thaitai.ck.page/b6ee82985a" target="_blank" class="draft--a"><span style="font-weight: bold; ">☆☆☆ 點擊這裡訂閱免費電子報 ☆☆☆</span></a></div>
-<div><iframe allowfullscreen src="https://open.spotify.com/episode/6JhRh13OfQwI48SvhxsjZf?si=b8ec214c1b444e8e"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://open.spotify.com/episode/6JhRh13OfQwI48SvhxsjZf?si=b8ec214c1b444e8e"></iframe></div>
 <blockquote class="draft-block draft--blockquote">最後悄悄說 ~<br>雖然今後所有皆為免費閱讀，<br>但依然可用贊助功能來支持喔！</blockquote>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/ef0dd309-7ee2-47d0-8179-c2f2864c5eb2.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
