--- a/_posts/2023-01-10-INMEDIA-轉載張崑陽帖文-設計師認煽惑不投票-判監2月-緩刑18月.html
+++ b/_posts/2023-01-10-INMEDIA-轉載張崑陽帖文-設計師認煽惑不投票-判監2月-緩刑18月.html
@@ -8,9 +8,9 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20230110f.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>44歲平面設計師於2021年立法會換屆選舉期間，轉載張崑陽的Facebook帖文，並稱「唔投票是出於自願，唔存在被他人煽惑」，遭廉政公署起訴「在選舉期間內藉公開活動作出煽惑另一人不投票或投無效票的非法行為」。他今（10日）於東區裁判法院承認控罪，求情稱因意氣用事而犯錯。裁判官溫紹明考慮被告個人背景及沒案底，相信乃單一事件，最終判監2個月，緩刑18個月。</p>
+<img src="https://www.inmediahk.net/files/column_images/20230110f.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>44歲平面設計師於2021年立法會換屆選舉期間，轉載張崑陽的Facebook帖文，並稱「唔投票係出於自願，無被人煽動」，遭廉政公署起訴「在選舉期間內藉公開活動作出煽惑另一人不投票或投無效票的非法行為」。他今（10日）於東區裁判法院承認控罪，求情稱因意氣用事而犯錯。裁判官溫紹明考慮被告個人背景及沒案底，相信乃單一事件，最終判監2個月，緩刑18個月。</p>
 <p>被告胡康麒（44歲，平面設計師）承認一項「在選舉期間內藉公開活動作出煽惑另一人不投票或投無效票的非法行為」罪。案情指，2021年立法會換屆選舉期為10月30日至12月19日，廉政公署在10月30日發表新聞稿，指任何人煽惑不投票即屬違法，該新聞稿獲本港多間傳媒報導。張崑陽原本為選舉的候選人，他於2020年8月14日離港，至2021年12月15日在Facebook 個人專頁發布帖文，呼籲市民不要在選舉中投票，目的是令投票率下跌及使政府尷尬。該帖文共有66個分享。</p>
-<p>被告於2021年12月15日分享張的帖文，並加上一段言論「唔投票是出於自願，唔存在被他人煽惑」。廉政公署人員在網上巡邏期間發現該則帖文，遂於2022年5月拘捕被告。</p>
+<p>被告於2021年12月15日分享張的帖文，並加上一段言論「唔投票係出於自願，無被人煽動」。廉政公署人員在網上巡邏期間發現該則帖文，遂於2022年5月拘捕被告。</p>
 <p>辯方律師求情指，被告職業為平面設計師，過去在不少比賽中獲獎，本案為單一事件，被告被捕時已即時配合廉署人員的調查，提供手機解鎖密碼，及承認他為涉案Facebook帳戶的使用者，他亦認罪，節省法庭時間。</p>
 <p>被告的求情信表示感到後悔，犯案乃因意氣用事，面對案件期間對家人感到內疚，盼案件完結後能聚焦照顧家人。辯方冀法庭考慮被告對社會有貢獻、剛失業，以及參考其他同類案件判刑，能判處緩刑。</p>
 <p>裁判官溫紹明判刑時指，本案控罪是嚴重，監禁可以是選項之一。考慮被告個人背景及過往沒案底，相信是次乃單一事件，被告日後不會再犯，緩刑是合適，最終判監2個月，緩刑18個月。</p>
