--- a/_posts/2023-01-10-INMEDIA-巴西裔球員高拉特放棄中國籍-內媒-國足歸化政策徹底失敗.html
+++ b/_posts/2023-01-10-INMEDIA-巴西裔球員高拉特放棄中國籍-內媒-國足歸化政策徹底失敗.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/20230110b.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>巴西裔球員高拉特（Ricardo Goulart）放棄中國國籍，他在2020年入籍中國，但一直未獲國際足協確認其轉籍有效，他從未代表國足上陣。內地媒體報道指，高拉特歷年在中國的收入共高達5億元人民幣。多間內地媒體均指，高拉特今次的「棄籍」，等同宣告國足的歸化政策徹底失敗。</p>
-<p>現年31歲的高拉特在2015年來華，以巴甲最老球員的身份，加盟當時如日中天的中超勁旅廣州恒大，轉會費高達1,500萬歐元。他同年替球隊取得亞冠盃冠軍，並為該支班霸球隊三奪中超聯賽冠軍，球迷視他為繼阿根廷中場孔卡後，歷來最強的中前場外援球員。</p>
+<p>現年31歲的高拉特在2015年來華，以巴甲最佳球員的身份，加盟當時如日中天的中超勁旅廣州恒大，轉會費高達1,500萬歐元。他同年替球隊取得亞冠盃冠軍，並為該支班霸球隊三奪中超聯賽冠軍，球迷視他為繼阿根廷中場孔卡後，歷來最強的中前場外援球員。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/photos/inmediahk/34131253771/in/album-72157680392288392/" title="IMG_4138"><img src="https://live.staticflickr.com/2853/34131253771_8cf8c1cf25_b.jpg" width="1024" alt="IMG_4138" /></a><br /><em>高拉特（前排左二）</em></p>
 <p>高拉特為廣州恒大的王牌球員，球隊當時大力推動外援球員入籍，以歸化中國為國足上陣，他亦被視為未來之星。不過在2019年，廣州恒大因為外援名額達到上限，狀態回落的高拉特被外借到巴甲球隊彭美拉斯。</p>
 <p><strong>2020年成功入籍  不獲國際足協認可未能為國足上陣</strong></p>
