--- a/_posts/2023-01-10-INMEDIA-最低工資加至40元-被指受惠人數過少-王沛詩-係好事.html
+++ b/_posts/2023-01-10-INMEDIA-最低工資加至40元-被指受惠人數過少-王沛詩-係好事.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20230110m.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府今宣布，行政會議通過將立法最低工資由現時時薪37.5元上調至40元，增幅為2.5元或6.7%，最快今年5月1日生效，預計可惠及7.3萬人。對於被指受惠人數過少，王沛詩稱：「受惠人數少咗，呢個係好事，咁唔通我哋想香港個個攞最低工資？」又形容是「社會之福，有進步」。</p>
+<img src="https://www.inmediahk.net/files/column_images/20230110m.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府今宣布，行政會議通過將立法最低工資由現時時薪37.5元上調至40元，增幅為2.5元或6.7%，最快今年5月1日生效，預計可惠及7.3萬人。對於被指受惠人數過少，最低工資委員會主席王沛詩稱：「受惠人數少咗，呢個係好事，咁唔通我哋想香港個個攞最低工資？」又形容是「社會之福，有進步」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Zk9343b518" title="最低工資委員會主席王沛詩"><img src="https://live.staticflickr.com/65535/52618278252_65a7c01154_b.jpg" width="1024" alt="最低工資委員會主席王沛詩" /></a><br /><em>王沛詩</em></p>
 <p><strong>受惠人數減少 王沛詩：有進步</strong></p>
 <p>最低工資委員會今午發佈《最低工資委員會2022年報告》，主席王沛詩在記者會上表示，委員之間互諒互讓、以數據為依歸，認為40元是目前最適合各方利益的方案。被問到全港僅約7.3萬人受惠於今次升幅，比最低工資在2011年推出時惠及的18萬人少，王沛詩認為受惠人數減少是好事，「咁唔通我哋想香港個個攞最低工資？」，又稱「收最低工資嘅人少咗，係社會之福，有進步」。</p>
@@ -26,4 +26,8 @@ author: 獨媒報導
 <p><strong>工聯會：僅1.8%打工仔受惠 效用成疑</strong></p>
 <p>工聯會則在立法會向記者表示，對低薪打工仔四年才獲上調工資是極之不公平。立法會議員郭偉強提到，受益於最低工資上調的打工仔只有1.8％，令人憂慮成效，認為除最低工資需由兩年一檢改為一年一檢之外，亦需全面檢討，包括參考綜援生活指數設定最低工資水平。</p>
 <p>立法會議員梁子穎認為政府「玩弄法律漏洞」，將每兩年至少檢討一次變為兩年才檢討一次。他同指目前的最低工資水平無法幫助前線低薪工友，令他們有尊嚴地生活。梁子穎認為最低工資應參考物價及工資中位數，令水平不會脫離實際情況。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7q578V0755" title="無標題"><img src="https://live.staticflickr.com/65535/52618777446_984572f70a_c.jpg" width="800" alt="無標題" /></a></p>
+<p><strong>社協表示失望：未有決心完善保障勞工</strong></p>
+<p>社協則發聲明表示失望，指法定最低工資自2011年實施以來，物價上升約四成，最低工資的實質購買力比2011年更低。社協又批評，最低工資水平審議過程黑箱作業，受惠於調升的人數少之又少，形同虛設。社協促將最低工資水平定於一人住戶入息中位數的一半，即不少於每小時50元，並研究引入「生活工資」概念。</p>
+<p>樂施會亦對新水平每小時40元表示失望，認為最低工資應高於平均綜援水平，即約每小時45.4元，並盡快落實一年一檢。</p>
 </div></div></div>
