--- a/_posts/2023-01-10-INMEDIA-港協暨奧委會要求轄下總會冠名-中國香港-足總主席貝鈞奇-恰當-大勢所趨.html
+++ b/_posts/2023-01-10-INMEDIA-港協暨奧委會要求轄下總會冠名-中國香港-足總主席貝鈞奇-恰當-大勢所趨.html
@@ -10,13 +10,13 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/20230110hkf.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>港協暨奧委會向轄下體育總會發信，要求必須在今年7月1日前在名稱之前冠名「中國香港」，一致地以該名義參與國際體育活動。香港足球總會主席貝鈞奇接受《獨媒》查詢時表示，冠名的做法恰當、絕對有需要，並形容屬大勢所趨。</p>
 <p><strong>7月前須完成冠名 否則或遭取消資助</strong></p>
-<p>本身是輔警總監的楊賜祖早前出任港協暨奧委會義務秘書長，他近日向轄下總會發信指，指在檢討檢討正名進展時，經統計後發現有部份總會未有冠名「中國香港」，遂提醒各總會盡快開展正名程序，不然有機會被取消資助，及要求離開奧委會，兼不能再參加國際賽事。</p>
+<p>本身是輔警總監的楊賜祖早前出任港協暨奧委會義務秘書長，他近日向轄下總會發信指，在檢討正名進展時，經統計後發現有部份總會未有冠名「中國香港」，遂提醒各總會盡快開展正名程序，不然有機會被取消資助，及要求離開奧委會，兼不能再參加國際賽事。</p>
 <p>在信件中，港協暨奧委會引用《基本法》第149條：「香港特別行政區的教育、科學、技術、文化、藝術、體育、專業、醫療衞生、勞工、社會福利、社會工作等方面的民間團體和宗教組織可同世界各國、各地區及國際的有關團體和組織保持和發展關係，各該團體和組織可根據需要冠用『中國香港』的名義，參與有關活動。」港協表示，相信各個總會有充足時間處理，如有需要亦會按個別情況作出酌情處理，及向總會了解相關原因和困難，盡力提供所需協助。</p>
 <p><strong>83總會僅18個已冠名 貝鈞奇：足總將召開董事會處理</strong></p>
 <p>翻查港協暨奧委會的<a href="https://www.hkolympic.org/zh/%e9%97%9c%e6%96%bc%e6%88%91%e5%80%91/%e6%9c%ac%e5%9c%b0%e9%ab%94%e8%82%b2%e7%b8%bd%e6%9c%83/">網頁</a>，現時83個總會中僅有18個總會已冠名為「中國香港」，包括中國香港體操總會、中國香港手球總會有限公司及中國香港游泳總會等。</p>
 <p>香港足球總會在1914年成立，回歸後未有冠名，主席貝鈞奇對《獨媒》強調，絕對有需要作統一，認為這是大勢所趨。他對記者稱，其曾任領導層的三個總會，即中國香港體操總會、中國香港柔道總會，及中國香港健美總會均已在回歸後冠名。</p>
-<p>他表示足總稍後將召開董事會及特別會員大會處理冠名事宜：「我自己就會話係正名嘅。」貝鈞奇表示，雖然足總在香港回歸後未有冠名，但重申一直均以中國香港的名義參加各項賽事。</p>
+<p>他表示足總稍後將召開董事會及特別會員大會處理冠名事宜：「我自己就會話係『正名』嘅。」貝鈞奇表示，雖然足總在香港回歸後未有冠名，但重申一直均以中國香港的名義參加各項賽事。</p>
 <p><strong>HKFA變CHKFA？ 貝鈞奇：再研究吓先</strong></p>
-<p>貝鈞奇表示，有信心在7月1日前能完成冠名工作，但承認在註冊、銀行帳戶及標誌事宜上需時處理，「不過呢啲技術嘢嚟啫，唔太難」，而在冠名將去信通知國際足協、亞洲足協及東亞。足球協會</p>
+<p>貝鈞奇表示，有信心在7月1日前能完成冠名工作，但承認在註冊、銀行帳戶及標誌事宜上需時處理，「不過呢啲技術嘢嚟啫，唔太難」，而在冠名後將去信通知國際足協、亞洲足協及東亞。</p>
 <p>香港足球總會現時的英文名稱為Hong Kong Football Association，縮寫名稱則為HKFA。記者問到冠名後的寫法，貝鈞奇則表示需要再研究：「CHKFA？通常英文擺後面嘅，Hong Kong SAR of China 啊，要再研究吓先。」</p>
 </div></div></div>
