Update VOCUS 2023-01-11 patch

--- a/_posts/2023-01-10-VOCUS-漫談保守主義-人類是用感官去了解世界-理性-2.html
+++ b/_posts/2023-01-10-VOCUS-漫談保守主義-人類是用感官去了解世界-理性-2.html
@@ -15,7 +15,35 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">我們要先理解平等的意義，平等有很多種說法。</div>
 <div class="draft-block draft--p left">一般而言，保守主義認為平等是機會平等，並非結果平等，這道理並非每個人都接受，但應該為現在多數人所知。不過，保守主義者眼中的平等，其實真正的意思是，在上帝之前人人平等，只會有內心品格的道德平等，而只要外顯出去，屬於物質性可量化的，就不可能平等。</div>
 <div class="draft-block draft--p left">例如？</div>
-<h3 class="draft-block draft--h3" name="header-ed3hm">用「理性」掩蓋個人好惡，提倡不現實的目標</h3>
+<h3 class="draft-block draft--h3" name="header-chps6">用「理性」掩蓋個人好惡，提倡不現實的目標</h3>
 <div class="draft-block draft--p left">人有天生智愚之別，臉蛋身材有美醜之分，不管當代社會崇尚哪一種，外在條件總是會有較優越的特質，不看臉只看腦就更殘酷，沒有一個文化會認為蠢蛋當領導者會比較好。</div>
 <div class="draft-block draft--p left">只要人的能力有差，表現在社會就有差，手藝好跟壞的人，作品可以一視同仁收同樣的價錢嗎？美感雖然很主觀，但就社會整體來說標準都不會差太遠，為了美醜需有一樣的平等機會，把劇作中的人物，外觀特質全部去除，如同戴上一致的面具，演技毫無特點，這種戲劇能看嗎？</div>
 <div class="draft-block draft--p left">保守主義對激進主義者批判很劇烈，原因主要是雙標，激進分子在自己不熟悉的工業產品上，常認為價錢都該均一化，而在熟悉的藝術領域上，卻相信經過自己巧手布置的香蕉，因為有「藝術性」，就該有農民果菜市場價的一萬倍。</div>
+<div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1575805082881-8828b300e0ca?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDI2fHxiYW5hbmF8ZW58MHx8fHwxNjcxOTIxNjI3&amp;ixlib=rb-4.0.3&amp;q=80" data-width="5472" data-height="3648" data-source="{&quot;name&quot;:&quot;Brando Makes Branding&quot;,&quot;url&quot;:&quot;https://unsplash.com/@brandomakesbranding&quot;,&quot;provider&quot;:&quot;Unsplash&quot;}" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft-block draft--p left">這現實就是不可能，意識形態轉成不同樣貌，不過只是分配價值不同。一個宣稱自己擺設幾個水果，拍張照就將其轉化成千萬價值的藝術家，在吃不飽的國家中只會被當神經病吊死。這就是絕對平等不可能出現的理由，就算要產生一個我們認同的意識形態，也要土壤長得出來。</div>
+<div class="draft-block draft--p left">理性最常被激進主義者當作護身符，近代開始將科學當作宗教，自己則潛身其中化為祭司，除魅到最後自己魅化。這種以科學之名的理性，已經跟保守主義認知的理性相差甚多，比較像是依附科學讓自己顯得理性，但實際上只是依從感官的無神論者，純粹根據個人利益好惡選擇，作為公共事務判斷基準。</div>
+<div class="draft-block draft--p left">這就如同平等兩字喊起來美好，實踐起來無比困難。在普選制的國家，人人都要有投票權，但歷史上我們都知道，初始的民主國家，是會限制投票權資格，而且一開始都認為沒有財產權的人不能投票。理由也很簡單，你提個政策說無產者可以去搶劫有產者，一定會高票當選啊。</div>
+<h3 class="draft-block draft--h3" name="header-6t1qq">權利是爭取來的：「天賦權利」要有社會根基支持</h3>
+<div class="draft-block draft--p left">民主制的推行，跟普及教育有很大的關連，教育水準提高，對民主的認識建立起來，大家都能遵行秩序的運作，國家才會穩定。如果貿然釋放權力，那麼人性中的惡就會凸顯出來，而要對抗這種惡，又不採取限制的手段，勢必更需要從下而上長出的秩序，也就是發自內心認同的信仰。在一個作票不算惡，被抓到才算罪的國家，說這是民主制度，你信嗎？並非法律明文規定就有，而是每個人都要遵守，並發自內心承認才有用。</div>
+<div class="draft-block draft--p left">法國大革命之所以暴亂，其餘波到了20世紀才勉強停歇，並非沒有道理。歸咎其原因，妄稱理性的激進主義，實則為無神論者，將秩序中的信仰摧毀才是目的。而這個摧毀的過程，在精神上的做法很單純，解放人性中的惡，以節制為錯誤，鼓動人心的貪婪即可。但這必須物質上有所配合，主要是工業革命後開始摧毀農村，把由土地長出的秩序連根拔出，不然也不會有那麼多的無產者加入革命。</div>
+<div class="draft-block draft--p left">在台灣，有土斯有財的思想非常重，導致人們都期望房價降低。但這種思想就跟希望有自己一片土地的傳統沒兩樣，都是人類對於安身立命的想像而來。所有現在激進主義者所稱的「自然權利」，所謂的天賦人權等等，皆可以說是傳統習慣的延續，只是在激進主義者中，去除了信仰的根基，有些甚至打掉社會習慣的傳承，變成教條。</div>
+<div class="draft-block draft--p left">這本質上是認為，人是一顆顆粒子，就像是玩模擬城市一樣，我們怎麼蓋城市，人就會怎麼住進去，生活型態完全照自己所想。這在遊戲中或許可以成立，因為程式並不會描述裡頭的電子小人，到底怎麼想事情。而在真實世界中，你可以規劃城市，但不能規劃家庭裡的人怎麼相處。</div>
+<div class="draft-block draft--p left">天賦權利說來美好，但哪一些權利算是天賦，又哪一些不算？重點是，誰說了算？</div>
+<div class="draft-block draft--p left">保守主義者，常被激進主義，用各種理性之名，批判為反對「自然權利」的保守教會激進派，這非常錯誤，說法根本是栽贓。其做法很簡單，先創造一個自然權利，而這些權利看來都很美好，誰不希望擁有呢？然後用支持這些權利與否，當作鬥爭反對者的工具。</div>
+<h3 class="draft-block draft--h3" name="header-a2b4v">權利的實現需要努力，己願他力就是錯的</h3>
+<div class="draft-block draft--p left">因為絕大部分的保守主義者，對於「權利」的看法與一般人沒有差，但對於權利的來源認知會不同。簡單說，權利是爭取來的，跟義務是相對的，沒有只要權利卻不擔負義務這種事。而保守主義認為，激進主義主張的各種天賦權利，其論點完全就是錯的。</div>
+<div class="draft-block draft--p left">錯的？對，激進主義對權利的理解錯誤，我們先不提近代最常說的，像是受教育權、自由工作權等屬於世界人權宣言的東西，因為多數讀者，在台灣教育下對這些權利的「自然」認知應該很強烈。（不過真的有去看人權宣言的人應該不多）</div>
+<div class="draft-block draft--p left">我們就先假設有一個權利，叫做「阿宅結婚權」，就算阿宅也有結婚的權利，您認同嗎？這應該也沒人會不認同吧，阿宅要結婚當然可以啊，為何不行？</div>
+<div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/460f305e-eab0-45b5-83cf-148001b5cad1.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">就是說啊！（設計對白）</figcaption></div></div>
+<div class="draft-block draft--p left">但如果我們說，有權利就有相對性的義務，所以支持阿宅結婚權，就代表有一些人必須負擔被結婚的義務。你會接受？應該也沒人會吧，被結婚，這不就強娶民女的概念嘛！</div>
+<div class="draft-block draft--p left">所以，阿宅結婚權並不是一種，因阿宅也有納稅服兵役的義務，所以可享有中華民國的各種權利的「權利」。阿宅結婚權比較像是努力的目標，我們認為阿宅也能結婚，但怎麼找到對象，請自己努力。</div>
+<div class="draft-block draft--p left">那麼回過頭來看，受教育權是哪一種？如果是相對於義務的，受教育權的義務是應對到什麼？獲得權利者要付出相對的義務，所以學童去讀書，他的義務是什麼？你不能說學生有受教育的權利，也有受教育的義務，這是迴圈邏輯，把權利義務化做等號。</div>
+<div class="draft-block draft--p left">但如果受教育權是一種努力的目標，那就非常符合歷史上，各國義務教育的發展史。不管哪個國家，人民有受教育的權利，多半是根據當代的需要，國家的富裕程度，逐漸的在提升。如果受教權是這種權利，那麼這就該是漸進式的，每個社會只要有逐漸改善就很棒，而不該是絕對性質的列出一個標準，沒達到就是違反自然權利。</div>
+<h3 class="draft-block draft--h3" name="header-5s7s5">不考慮成本代價的倡議，僅僅是自我滿足</h3>
+<div class="draft-block draft--p left">保守主義的看法很簡單，各種自然權利是要去爭取的，畢竟每個國家都有各自的風土民情、歷史人文背景，今天你認為受教育權利不可剝奪，怎不去對阿富汗的塔利班說，反在時代廣場上痛罵美國沒有免學費就是剝奪受教權？靠爭取而來的權利，是不能任意類比的，你不能只要某國這個政策的優點，卻不要相對應的缺點。</div>
+<div class="draft-block draft--p left">天底下沒有白吃的午餐，想要移植自然權利來台灣，那麼我們願意接受這些權利應付的代價嗎？歐美許多不錯的權利，其歷史基礎都是從基督教發展出的，所以我們要在台灣先設立基督國教？別鬧了。</div>
+<div class="draft-block draft--p left">這就是極端主義者的理論不可行的理由，他們要的不是可行性，而是自我滿足。在台灣習慣無法接受的外國政策，或徹底違背民俗信仰的法條，根本就推不下去。要推，就得妥協，去跟地方溝通，找出一個折衷的辦法。</div>
+<div class="draft-block draft--p left">我們在這十年，已經看過太多案例，要求各國有一致的環保價值，卻對某國的汙染裝沒看到。要求共享一樣的人權價值，卻不想在阿富汗維持軍力去強迫推行。高喊聖人標準的各位極端領袖，每一個都是媒體打造出的金身。</div>
+<div class="draft-block draft--p left">筆者知道，各位對這所謂理性的批判，會有相當的反彈與不解。所以這邊用台灣人可以懂的概念來說：</div>
+<div class="draft-block draft--quotesSpecial center"><div class="content">「我是理性中間選民……」</div></div>
+<div class="draft-block draft--p left">……咳，各位可以懂了嗎，通常越是這樣宣稱的人，其理性也就越自以為是。</div>
